--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
         <!-- top title -->
         <div class="row">
             <div class="col text-center mt-5">
-                <h4>NOT-TO-DO-LIST</h4>
+                <h2>NOT-TO-DO-LIST</h2>
             </div>
         </div>
 
         <!-- form area  -->
-        <form action="">
+        <form action="javascript:void(0)" onsubmit="handleOnSubmit(this)">
         <div class="row mt-3 g-2">
             <div class="col-md-6">
-              <input type="text" class="form-control" placeholder="Task Name" aria-label="First name">
+              <input type="text" class="form-control" placeholder="Task Name" name="task" required>
             </div>
             <div class="col-md-4">
-              <input type="text" class="form-control" placeholder="Time taken" aria-label="Last name">
+              <input type="number" class="form-control" placeholder="Time taken" name="hr" min="1" required>
             </div>
             <div class=" col-md-2 d-grid gap-2">
-                <button class="btn btn-primary" type="button"><i class="fa-solid fa-plus"></i>Add New Task</button>
+                <button class="btn btn-primary"><i class="fa-solid fa-plus"></i>Add New Task</button>
               </div>
           </div>
         </form>
@@ -50,48 +50,8 @@
                 <h2 class="text-center">Entry list</h2>
                 <hr>
                 <table class="table table-striped table-hover">
-                    <tbody>
-                      <tr>
-                        <th scope="row">1</th>
-                        <td>Watching TV</td>
-                        <td>50</td>
-                        <td class="text-end">
-                            <button class="btn btn-danger"><i class="fa-solid fa-trash"></i> </button>
-                            <button class="btn btn-success"><i class="fa-solid fa-right-long"></i> </button>
-
-                        </td>
-                      </tr>
-                      <tr>
-                        <th scope="row">1</th>
-                        <td>Watching TV</td>
-                        <td>50</td>
-                        <td>
-                            <button class="btn btn-danger"><i class="fa-solid fa-trash"></i> </button>
-                            <button class="btn btn-success"><i class="fa-solid fa-right-long"></i> </button>
-
-                        </td>
-                      </tr>
-                      <tr>
-                        <th scope="row">1</th>
-                        <td>Watching TV</td>
-                        <td>50</td>
-                        <td>
-                            <button class="btn btn-danger"><i class="fa-solid fa-trash"></i> </button>
-                            <button class="btn btn-success"><i class="fa-solid fa-right-long"></i> </button>
-
-                        </td>
-                      </tr>
-                      <tr>
-                        <th scope="row">1</th>
-                        <td>Watching TV</td>
-                        <td>50</td>
-                        <td>
-                            <button class="btn btn-danger"><i class="fa-solid fa-trash"></i> </button>
-                            <button class="btn btn-success"><i class="fa-solid fa-right-long"></i> </button>
-
-                        </td>
-                      </tr>
-                     
+                    <tbody id="task-list">
+                      
                     </tbody>
                   </table>
             </div>
@@ -99,7 +59,7 @@
                 <h2 class="text-center">Bad list</h2>
              <hr>
              <table class="table table-striped table-hover">
-                <tbody>
+                <tbody >
                   <tr>
                     <th scope="row">1</th>
                     <td>Watching TV</td>
